# crust_ai

./: .env  .gitignore  Cargo.toml  IMPROVEMENTS_W7_AUTH.md  IMPROVEMENTS_W7_GENERAL.md  README.md
.sqlx/: query-3eea7351deeda74b8e1c3bc5e65e8b164168da0bc56d442d0059d2192d2722cc.json
app/: Cargo.toml
app/.sqlx/: query-476f6a7d2a64ea7c73bb5a00fc05add29ddf4f8857b9acce6316f48d7fcecbab.json  query-cd32fb233f5c8c75836507a5c79e320759352dee4c075c6d0b37d8bae987dec9.json
app/src/: app.rs  lib.rs  shell.rs
app/src/common/: app_state.rs  errors.rs
app/src/components/: mod.rs
app/src/components/highlight/: highlight_code.rs  highlight_language.rs  mod.rs  syntect_highlighter_code.rs  toml_highlighter.rs
app/src/components/layout/: app_bottom_nav.rs  app_sidenav.rs  header.rs  mod.rs
app/src/components/ui/: mod.rs
app/src/domain/: mod.rs
app/src/domain/auth/: mod.rs  model.rs  protected_route.rs  routes.rs  server_fns.rs
app/src/domain/chat/: mod.rs  models.rs  page_chat.rs  routes.rs  server_fns.rs
app/src/domain/home/: mod.rs  page_home.rs
app/src/domain/template/: mod.rs  template_db.rs  template_services.rs
app/src/domain/template/components/: template_form.rs  template_list.rs
app/src/domain/template/routing/: mod.rs  page_details.rs  routes.rs
app/src/utils/: param.rs
migrations/: 20250316131000_create_templates_table.sql  20250501000001_create_users_table.sql  20250501000002_create_chats_table.sql  20250501000003_create_messages_table.sql  20250501000004_create_documents_table.sql  20250501000005_create_sessions_table.sql
public/: chats.json
server/: Cargo.toml
server/src/: main.rs
server/src/app_router/: build_app_router.rs
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
